--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bytemuck = "1.18.0"
 eframe = {version ="0.29.0", features=["wgpu"]}
 wgpu = "22.1.0"
